discussion/kv_engine/159412/159412_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47687: Prevent dropping of prepares which can be undone by Magma rollback

Magma creates checkpoints every few minutes which are used for
rollback. Since magma does background compaction it is possible
for compaction to drop deletes between the checkpoints. If
kv_engine requests a rollback to one of these checkpoints, the
sequence scan does not see the compacted prepare keys resulting
in the rollback callback not being called for these keys.
This patch ensures we dont drop prepares that can be rolled back
by magma.

Change-Id: If6c3faa48e500506ca36f5282ced6f892018537d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Apaar gupta
Date: 2021-09-01 18:49:38.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-01 18:52:04.000000000
Message: 
Patch Set 11: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39323/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39323/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33485/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33485/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13746/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13511/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13511/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14175/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14175/ )

Compile error at [2021-09-01T18:51:53.805Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2052:53:
error: use of undeclared identifier "oldestSeqno"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14175/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1560/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1560/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12657/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12657/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21686/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21686/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11899/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2052:53: error: use of undeclared identifier "oldestSeqno" [clang-diagnostic-error]
    auto compactionCB = [this, ctx, rollbackSeqno = oldestSeqno](
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2056:39: error: use of undeclared identifier "rollbackSeqno" [clang-diagnostic-error]
        cb->minRollbackPrepareSeqno = rollbackSeqno;
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2066:9: error: use of undeclared identifier "status" [clang-diagnostic-error]
        status = magma->CompactKVStore(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2068:14: error: use of undeclared identifier "status"; did you mean "stat"? [clang-diagnostic-error]
        if (!status) {
             ^~~~~~
             stat
/usr/include/x86_64-linux-gnu/sys/stat.h:449:8: note: "stat" declared here
__NTH (stat (const char *__path, struct stat *__statbuf))
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2100:9: error: use of undeclared identifier "status" [clang-diagnostic-error]
        status = magma->CompactKVStore(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2102:14: error: use of undeclared identifier "status"; did you mean "stat"? [clang-diagnostic-error]
        if (!status) {
             ^~~~~~
             stat
/usr/include/x86_64-linux-gnu/sys/stat.h:449:8: note: "stat" declared here
__NTH (stat (const char *__path, struct stat *__statbuf))
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2107:21: error: use of undeclared identifier "status" [clang-diagnostic-error]
                    status.String());
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2124:13: error: use of undeclared identifier "status" [clang-diagnostic-error]
            status = magma->CompactKVStore(
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2126:18: error: use of undeclared identifier "status"; did you mean "stat"? [clang-diagnostic-error]
            if (!status) {
                 ^~~~~~
                 stat
/usr/include/x86_64-linux-gnu/sys/stat.h:449:8: note: "stat" declared here
__NTH (stat (const char *__path, struct stat *__statbuf))
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2133:25: error: use of undeclared identifier "status" [clang-diagnostic-error]
                        status.String());
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2231:9: error: use of undeclared identifier "status" [clang-diagnostic-error]
        status = magma->WriteDocs(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2233:14: error: use of undeclared identifier "status"; did you mean "stat"? [clang-diagnostic-error]
        if (!status) {
             ^~~~~~
             stat
/usr/include/x86_64-linux-gnu/sys/stat.h:449:8: note: "stat" declared here
__NTH (stat (const char *__path, struct stat *__statbuf))
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2238:21: error: use of undeclared identifier "status" [clang-diagnostic-error]
                    status.String());
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2243:13: error: use of undeclared identifier "status" [clang-diagnostic-error]
            status = magma->Sync(true);
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2244:18: error: use of undeclared identifier "status"; did you mean "stat"? [clang-diagnostic-error]
            if (!status) {
                 ^~~~~~
                 stat
/usr/include/x86_64-linux-gnu/sys/stat.h:449:8: note: "stat" declared here
__NTH (stat (const char *__path, struct stat *__statbuf))
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2250:25: error: use of undeclared identifier "status" [clang-diagnostic-error]
                        status.String());
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11899/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2052:53:
error: use of undeclared identifier "oldestSeqno" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11899/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1543/ : FAILURE

Compile error at [2021-09-01T18:51:37.489Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2052:53:
error: use of undeclared identifier "oldestSeqno"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1543/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10682/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
